# fastmcp-template

./: .coverage  .env  .pre-commit-config.yaml  .rules  CONTRIBUTING.md  README.md  VERIFICATION.md  cookiecutter.json  flake.nix  pyproject.toml
.agent/: scratchpad.md
.agent/goals/: scratchpad.md
.agent/goals/01-Fix-Cookiecutter-Templating/: scratchpad.md
.agent/goals/02-FastMCP-Template-Scaffolding-Script/: scratchpad.md
.agent/goals/02-FastMCP-Template-Scaffolding-Script/Task-01-Create-Cookiecutter-Config/: scratchpad.md
.agent/goals/02-FastMCP-Template-Scaffolding-Script/Task-02-File-Operations/: scratchpad.md
.agent/goals/02-FastMCP-Template-Scaffolding-Script/Task-02-Restructure-Repository/: scratchpad.md
.agent/goals/02-FastMCP-Template-Scaffolding-Script/Task-03-Convert-Files-to-Jinja2/: scratchpad.md
.agent/goals/02-FastMCP-Template-Scaffolding-Script/Task-04-Create-Post-Generation-Hooks/: scratchpad.md
.agent/goals/02-Fix-Demo-Tools-Test-Consistency/: scratchpad.md
.agent/goals/03-Add-Minimal-Tools-Option/: scratchpad.md
.agent/goals/04-Enforce-CI-Gated-Workflow/: scratchpad.md
.agent/goals/05-Add-Template-CI-Testing/: scratchpad.md
.agent/goals/06-Add-Template-Variants/: scratchpad.md
.agent/goals/07-Add-Example-Integrations/: scratchpad.md
.agent/goals/08-Zed-Project-Specific-Thread-Storage/: scratchpad.md
.agent/goals/09-Customize-Rules-With-Cookiecutter/: scratchpad.md
.agent/goals/10-Add-GitHub-Repo-Creation/: scratchpad.md
.agent/goals/archived/01-Add-API-Key-Checker/: scratchpad.md
.agent/goals/archived/02-FastMCP-Template-Scaffolding-Script/: scratchpad.md
.agent/goals/archived/02-FastMCP-Template-Scaffolding-Script/Task-01-CLI-Framework/: scratchpad.md
.agent/goals/archived/02-FastMCP-Template-Scaffolding-Script/Task-01-Create-Cookiecutter-Config/: VARIABLES.md
.github/: branch-protection.json  main-branch-protection.json
.github/workflows/: ci.yml  release.yml  test-template.yml
.zed/: settings.json
app/: __init__.py  server.py  tracing.py
docker/: Dockerfile.base
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: generate_all_variants.sh  validate-template.sh
tests/: conftest.py  test_server.py  test_tracing.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  .rules  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  TOOLS.md  docker-compose.yml  flake.nix  pyproject.toml
{{cookiecutter.project_slug}}/.agent/: scratchpad.md
{{cookiecutter.project_slug}}/.agent/goals/: scratchpad.md
{{cookiecutter.project_slug}}/.agent/goals/01-Initial-Setup-And-Release/: scratchpad.md
{{cookiecutter.project_slug}}/.agent/tmp/: .gitignore  README.md
{{cookiecutter.project_slug}}/.github/: copilot-instructions.md
{{cookiecutter.project_slug}}/.github/workflows/: cd.yml  ci.yml  publish.yml  release.yml
{{cookiecutter.project_slug}}/.zed/: settings.json
{{cookiecutter.project_slug}}/app/: __init__.py  __main__.py  config.py  server.py  tracing.py
{{cookiecutter.project_slug}}/app/prompts/: __init__.py
{{cookiecutter.project_slug}}/app/tools/: __init__.py  demo.py  health.py
{{cookiecutter.project_slug}}/docker/: Dockerfile  Dockerfile.base  Dockerfile.dev
{{cookiecutter.project_slug}}/docs/: README.md
{{cookiecutter.project_slug}}/tests/: __init__.py  conftest.py  test_server.py
(+2 files in other folders)
