[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "fastmcp{{ cookiecutter.fastmcp_version }}",
{% if cookiecutter.include_langfuse == "yes" %}
    "langfuse{{ cookiecutter.langfuse_version }}",
{% endif %}
    "mcp-refcache{{ cookiecutter.mcp_refcache_version }}",
    "pydantic{{ cookiecutter.pydantic_version }}",
    "pydantic-settings>=2.10.0",
    "typer>=0.15.0",
]

[project.scripts]
{{ cookiecutter.project_slug }} = "app.__main__:app"

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build]
exclude = [
    ".direnv/",
    ".envrc",
    ".envrc.local",
    "archive/",
    "tests/",
    ".pytest_cache/",
    ".mypy_cache/",
    ".coverage",
    "*.egg-info/",
]

[tool.uv]
compile-bytecode = false

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]

[tool.ruff]
target-version = "py{{ cookiecutter.python_version | replace('.', '') }}"
line-length = 88
src = ["app", "tests"]
exclude = [".agent", ".external", "archive"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "RUF", "D", "ANN", "TCH", "SIM", "PT",
]
ignore = [
    "E501", "B008", "D100", "D104", "D107", "ANN401",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN", "S101"]
"__init__.py" = ["D"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
# 73 - the best number (ask Sheldon Cooper)
fail_under = 73
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.coverage.html]
skip_empty = true

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
strict = true
warn_return_any = true
warn_unused_ignores = true
# Allow untyped decorators from FastMCP/mcp-refcache (no type stubs available)
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["fastmcp.*", "mcp_refcache.*", "langfuse.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "archive"]
